<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

        <group android:checkableBehavior="single" android:id="@+id/g2">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_baseline_home_24dp"
                    android:title="@string/title_home" />
                <item
                    android:id="@+id/nav_category"
                    android:icon="@drawable/ic_baseline_category_24dp"
                    app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
                    android:title="@string/title_category" />
                <item
                    android:id="@+id/nav_search"
                    android:icon="@drawable/ic_baseline_search_24dp"
                    android:title="@string/title_search" />
                <item
                    android:id="@+id/nav_cart"
                    android:icon="@drawable/ic_baseline_cart_24dp"
                    app:actionViewClass="android.widget.TextView"
                    android:title="@string/title_cart" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_baseline_person_24dp"
                    android:title="@string/title_profile" />
        </group>

        <group android:checkableBehavior="single" android:id="@+id/g1" >
           <!--     <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_baseline_settings_24dp"
                    android:title="@string/title_settings" />-->

             <!--   <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_baseline_share_24dp"
                    android:title="@string/title_share" />-->

                <item
                    android:id="@+id/nav_about_us"
                    android:icon="@drawable/ic_baseline_aboutus_24dp"
                    android:title="@string/title_aboutus" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_baseline_logout_24dp"
                    android:title="@string/title_logout" />
        </group>
</menu>