<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3E9D2"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <ImageView
            android:id="@+id/logo_app"
            android:layout_width="123dp"
            android:layout_height="135dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="start|top"
            android:contentDescription="@string/cancel"
            android:padding="5dp"
            android:src="@drawable/logo_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="210dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/allerta"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="30sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.897"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.346" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="235dp"
            android:layout_height="23dp"
            android:fontFamily="@font/allerta"
            android:text="@string/slogan"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.968"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appTitle"
            app:layout_constraintVertical_bias="0.277" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_fill_form"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_and_surname_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"

        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_baseline_person_30dp"
        app:startIconContentDescription="@string/content_description_end_icon"
        android:hint="@string/name_and_surname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_and_surname_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birth_date_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        android:hint="@string/birth_date_format"
        app:startIconDrawable="@drawable/ic_baseline_calendar_30dp"
        app:startIconContentDescription="@string/calendar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:onClick="showDatePickerDialog" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.hbb20.CountryCodePicker
            android:id="@+id/country_code"
            android:background="@drawable/border_outlined_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="21.5dp"
            android:padding="9dp"
            app:ccpDialog_keyboardAutoPopup="true"
            app:ccp_arrowSize="16sp"
            app:ccp_autoDetectCountry="true"
            app:ccp_defaultNameCode="KZ"
            app:ccp_showArrow="true"
            app:ccp_showFlag="true"
            app:ccp_showFullName="false"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="true"
            app:ccp_textSize="16sp">

        </com.hbb20.CountryCodePicker>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/phone_number"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gender_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:startIconDrawable="@drawable/ic_baseline_gender">

        <AutoCompleteTextView
            android:id="@+id/gender_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/gender"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_marginTop="24.7dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ProgressBar>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"

        android:paddingTop="12dp"
        android:paddingBottom="12dp"

        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"

        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/submit"
        app:cornerRadius="30dp" />
</LinearLayout>
