<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3E9D2"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".authentications.LoginActivity">

    <ImageView
        android:id="@+id/cancel_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:contentDescription="@string/cancel"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:paddingTop="15dp"
        android:src="@drawable/ic_baseline_cancel_new" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/logo_app"
            android:layout_width="123dp"
            android:layout_height="135dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="start|top"
            android:contentDescription="@string/cancel"
            android:padding="5dp"
            android:src="@drawable/logo_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="210dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/allerta"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="30sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.897"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.346" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="235dp"
            android:layout_height="23dp"
            android:fontFamily="@font/allerta"
            android:text="@string/slogan"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.968"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appTitle"
            app:layout_constraintVertical_bias="0.277" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:text="@string/login_nice_to_see_you_again"
        android:textSize="25sp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/google_frame_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_background_blue">

        <ImageView
            android:id="@+id/google_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:contentDescription="@string/google"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:src="@drawable/ic_baseline_google" />

        <TextView
            android:id="@+id/login_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="10dp"
            android:text="@string/login_with_google"
            android:textSize="25sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@drawable/border_background_black"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/email_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:contentDescription="@string/google"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:src="@drawable/ic_baseline_email_60dp" />

        <TextView
            android:id="@+id/login_with_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="10dp"
            android:text="@string/continue_with_email"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/login_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ProgressBar>

    <TextView
        android:id="@+id/login_describe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login_to_your_account_using_the_previously_selected_authorization_method"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/singup_go"
        android:text="@string/dont_have_an_account_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textStyle="bold"
        />

</LinearLayout>