<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_red_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome_to_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/coiny"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-30dp"
        android:padding="20dp"
        android:text="@string/welcome_to_"
        android:textColor="#F3E9D2"
        android:textSize="40sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/we_are_offe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/comfortaa"
        android:gravity="center"
        android:text="@string/we_are_offe"
        android:textAppearance="@style/we_are_offe"
        android:textColor="#F3E9D2"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_to_"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginTop="28dp"
        android:background="@drawable/ic_baseline_main_logotype"
        android:contentDescription="@string/logotype"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/we_are_offe"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_signup_go_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/milk_color"
        android:fontFamily="@font/coiny"
        android:gravity="center"

        android:text="@string/signup"
        android:textColor="@color/light_red_color"

        android:textSize="22sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_1"
        app:layout_constraintVertical_bias="0.382" />

    <TextView
        android:id="@+id/already_have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/comfortaa"
        android:gravity="center_horizontal|top"
        android:text="@string/already_have"
        android:textAppearance="@style/already_have"

        android:textColor="#F3E9D2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_signup_go_button"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/welcome_login_go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/coiny"
        android:gravity="center_horizontal|top"

        android:text="@string/login_upper"

        android:textAppearance="@style/already_have"
        android:textColor="#F3E9D2"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/already_have"
        app:layout_constraintVertical_bias="0.275" />

</androidx.constraintlayout.widget.ConstraintLayout>